# moat

./: .dockerignore  .gitignore  CONTRIBUTION.md  Cargo.toml  Dockerfile  Makefile  NOTICE  QUICKSTART.md  README.md  RELEASE.md  STORY.md  build.rs  clippy.toml  config_example.yaml  docker-bake.hcl  docker-compose.yml  install.sh  upstreams_example.yaml  upstreams_example_consul.yaml  upstreams_example_kubernetes.yaml  upstreams_test.yaml
.github/workflows/: build-controller.yaml  build.yaml  moat-operator-release.yaml  release.yaml
docs/: DAEMON_MODE.md  ENVIRONMNET_VARS.md  OPERATOR_README.md  PROXY_PROTOCOL.md
helm/: values.yaml
helm/moat-controller/: Chart.yaml
helm/templates/: configmap.yaml  deployment.yaml
moat/: Cargo.toml  config_example.yaml
moat-operator/: Dockerfile  go.mod  go.sum
moat-operator/config/: manager.yaml
moat-operator/helm/: Chart.yaml
moat-operator/helm/charts/: clamav-1.6.82.tgz  moat-0.1.0.tgz
moat-operator/helm/charts/moat/: Chart.yaml  values.yaml
moat/src/: access_log.rs  access_rules.rs  app_state.rs  arxignis.rs  cli.rs  config.rs  domain_filter.rs  main.rs  proxy_utils.rs  redis.rs  threat.rs  wirefilter.rs
moat/src/actions/: captcha.rs
moat/src/bpf/: filter.bpf.c
moat/src/http/: mod.rs
moat/src/ssl/: mod.rs  tls_fingerprint.rs
moat/src/utils/: mod.rs
moat/templates/: block.html
others/clamd/: clamd.conf
others/systemd/: moat.service  synapse.service
others/systemd/clamd/: override.conf
scenarios/moat-operator/: background.sh  finish.md  index.json  intro.md  moat.sh  step1.md  step2.md  step3.md  step4.md
src/: access_log.rs  access_rules.rs  app_state.rs  authcheck.rs  bpf_stats.rs  captcha_server.rs  cli.rs  config.rs  event_queue.rs  firewall.rs  http_client.rs  ja4_plus.rs  main.rs  proxy_protocol.rs  proxy_utils.rs  redis.rs  tcp_fingerprint.rs  threat.rs  utils.rs  wirefilter.rs
src/acme/: config.rs  domain_reader.rs  embedded.rs  lib.rs  mod.rs  upstreams_reader.rs
src/acme/storage/: mod.rs  redis.rs
src/actions/: captcha.rs
src/bpf/: filter.bpf.c
src/content_scanning/: mod.rs
src/http/: health_checks.rs  mod.rs
src/http_proxy/: bgservice.rs  gethosts.rs  proxyhttp.rs  start.rs  webserver.rs
src/threat/: mod.rs
src/utils/: bpf_utils.rs  discovery.rs  filewatch.rs  healthcheck.rs  http_utils.rs  metrics.rs  mod.rs  parceyaml.rs  state.rs  structs.rs  tcp_fingerprint.rs  tls.rs  tls_client_hello.rs  tls_fingerprint.rs  tools.rs
src/waf/: mod.rs  wirefilter.rs
src/waf/actions/: captcha.rs  mod.rs
src/worker/: certificate.rs  config.rs  log.rs  manager.rs  mod.rs
