[package]
name = "moat"
authors = ["Arxignis <support@arxignis.com>"]
license = "ELv2"
homepage = "https://arxignis.com"
repository = "https://github.com/arxignis/moat"
version = "0.1.1"
edition = "2024"
keywords = ["bpf", "firewall", "reverse-proxy", "tls", "proxy", "proxy-protocol", "content-scanning", "threat-intelligence", "captcha", "hcaptcha", "recaptcha", "cloudflare-turnstile", "runtime"]
readme = "README.md"

[build-dependencies]
libbpf-cargo = "0.25.0"
vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git", rev = "83a228cf37fc65f2d14e4896a04922b5ee531a94" }

[dependencies]
libbpf-rs = "0.25.0"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
  "signal",
  "sync",
] }
anyhow = "1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = [
  "server",
  "tokio",
  "client-legacy",
  "http1",
] }
http-body-util = "0.1"
plain = "0.2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4.5.4", features = ["derive"] }
nix = { version = "0.30.0", features = ["net", "fs"] }
redis = { version = "0.32", features = ["tokio-native-tls-comp", "connection-manager"]}
tokio-rustls = "0.26.4"
rustls = { version = "0.23.12", default-features = false, features = [
  "std",
  "ring",
  "logging",
] }
rustls-pemfile = "2.1.2"
webpki-roots = "1.0"
base64 = "0.22"
async-trait = "0.1.81"
sha2 = "0.10.8"
tokio-stream = { version = "0.1.15", features = ["net"] }
hex = "0.4.3"
bytes = "1.7.1"
futures = "0.3.31"
futures-rustls = "0.26.0"
tls-parser = "0.12.2"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
ipnet = "2.9"
tokio-test = "0.4"
x509-parser = "0.18"
gethostname = "1.1.0"
local-ip-address = "0.6.5"
wirefilter-engine = { git = "https://github.com/arxignis/wirefilter" , rev = "ab901470a24aad789cb9c03dd214d6c7d4cab589" }
flate2 = "1.0"
log = "0.4.28"
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime"] }
jsonwebtoken = { version = "10.1", features = ["rust_crypto"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2.5"
clamav-tcp = "0.2"
multer = "3.0"
proxy-protocol = { git = "https://github.com/arxignis/proxy-protocol", rev = "ac28b27d317088f0e9e89805ada3b9f5cfbf5673"}
rand = "0.9"
regex = "1.0"
daemonize = "0.5.0"

#pingora = { path = "../pingora/pingora", features = ["lb", "openssl"] }
#pingora-core = { path = "../pingora/pingora-core" }
#pingora-proxy = { path = "../pingora/pingora-proxy" }
#pingora-limits = { path = "../pingora/pingora-limits" }
#pingora-http = { path = "../pingora/pingora-http" }


pingora = { git = "https://github.com/arxignis/pingora" , rev = "65d2d76f1e80cb3ac7c31493a0aba203fea055ca", features = ["lb", "openssl"] }
pingora-core = { git = "https://github.com/arxignis/pingora" , rev = "65d2d76f1e80cb3ac7c31493a0aba203fea055ca" }
pingora-proxy = { git = "https://github.com/arxignis/pingora" , rev = "65d2d76f1e80cb3ac7c31493a0aba203fea055ca" }
pingora-limits = { git = "https://github.com/arxignis/pingora" , rev = "65d2d76f1e80cb3ac7c31493a0aba203fea055ca" }
pingora-http = { git = "https://github.com/arxignis/pingora" , rev = "65d2d76f1e80cb3ac7c31493a0aba203fea055ca" }
pingora-memory-cache = { git = "https://github.com/arxignis/pingora" , rev = "65d2d76f1e80cb3ac7c31493a0aba203fea055ca" }
mimalloc = { version = "0.1.48", default-features = false }
dashmap = "7.0.0-rc2"
ctrlc = "3.5.0"
arc-swap = "1.7.1"
prometheus = "0.14.0"
once_cell = "1.21.3"
axum = { version = "0.8.4" }
axum-server = { version = "0.7.2", features = ["tls-openssl"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tonic = "0.14.2"
port_check = "0.3.0"
notify = "8.2.0"
privdrop = "0.5.6"
base16ct = { version = "0.3.0", features = ["alloc"] }
